@@ -10,8 +10,8 @@ Version 2.15.1
 * The following bugs are resolved with this release:
 
   411, 2547, 2548, 11261, 11365, 11494, 13583, 13618, 13731, 13732, 13733,
-  13747, 13748, 13749, 13753, 13754, 13756, 13771, 13773, 13774, 13786,
-  14048, 14059, 14167, 14273, 14459, 14621, 14648, 14040, 15073
+  13747, 13748, 13749, 13753, 13754, 13756, 13765, 13771, 13773, 13774,
+  13786, 14048, 14059, 14167, 14273, 14459, 14621, 14648, 14040, 15073
 
 Version 2.15
 
