@@ -1,3 +1,8 @@
+2012-02-24  Ulrich Drepper  <drepper@gmail.com>
+
+	* stdlib/fmtmsg.c (fmtmsg): Lock around use of severity list.
+	Reported by Peng Haitao <penght@cn.fujitsu.com>.
+
 2012-01-27  Ulrich Drepper  <drepper@gmail.com>
 
 	[BZ #13618]
